hu recuperar contraseña terminada.

--- a/core/templates/login/recuperar_contraseña.html
+++ b/core/templates/login/recuperar_contraseña.html
@@ -63,7 +63,7 @@
         {% if success %}
             <div class="modal">
                 <div class="modal-content">
-                    <h2>SE LE HA ENVIADO LA CONTRASEÑA AL CORREO REGISTRADO</h2>
+                    <h2>Se ha enviado un enlace a el correo para cambiar la contraseña</h2>
                     <div class="button-container">
                         <a href="{% url 'login' %}" class="button button-submit">VOLVER</a>
                     </div>
