--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Servi-Watch{% endblock %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/egreso_modal.css' %}">
 </head>
 <body>
   <!-- Barra superior -->
@@ -37,5 +39,6 @@
       {% endblock %}
     </section>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
