--- a/core/templates/cliente/cliente_form.html
+++ b/core/templates/cliente/cliente_form.html
@@ -9,7 +9,7 @@
 
   <div>
     <div class="left-column">
-    <form method="POST" class="custom-form" id="clienteForm">
+    <form method="POST" class="custom-form" id="clienteForm" novalidate>
       {% csrf_token %}
 
       <div class="input-group mb-3">
