--- a/core/static/css/formularios.css
+++ b/core/static/css/formularios.css
@@ -25,7 +25,7 @@ form {
   font-weight: bold;
   font-size: 14px;
   padding: 10px;
-  border: 1px solid #626E15;
+  border: 2px solid #626E15;
   border-radius: 4px;
   width: 100%;
   box-sizing: border-box;
@@ -142,13 +142,25 @@ h4{
   display: block;
   font-weight: bold;
   width: 100%;
+  border-radius: 4px;
 }
 
 .form-group:has(.form-error) input {
   border: 2px solid #dc3545;
   background-color: #fff8f8;
+  border-radius: 4px;
 }
 
 .is-invalid {
   border: 2px solid #dc3545;
+  border-radius: 4px;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  z-index: 10;
 }
