--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -23,8 +23,7 @@
         <table class="table table-striped table-hover align-middle">
           <thead class="table-primary">
             <tr>
-              <th>Nombre</th>
-              <th>Correo</th>
+              <th>Usuario</th>
               <th class="text-end">Acciones</th>
             </tr>
           </thead>
@@ -32,7 +31,6 @@
             {% for usuario in usuarios %}
               <tr>
                 <td>{{ usuario.username }}</td>
-                <td>{{ usuario.email }}</td>
               </tr>
             {% endfor %}
           </tbody>
