--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Lista de Clientes</title>
+  <title>Lista de Usuarios</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="stylesheet" href="{% static 'css/ventana.css' %}">
@@ -13,35 +13,31 @@
   <div class="container py-5">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="mb-0">Lista de Clientes</h1>
-      <a href="{% url 'cliente_create' %}" class="btn btn-success">+ Agregar Cliente</a>
+      <h1 class="mb-0">Lista de Usuarios</h1>
+      <a href="{% url 'usuario_create' %}" class="btn btn-success">+ Agregar Usuario</a>
     </div>
 
 
-    {% if clientes %}
+    {% if usuarios %}
       <div class="table-responsive">
         <table class="table table-striped table-hover align-middle">
           <thead class="table-primary">
             <tr>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Teléfono</th>
+              <th>Usuario</th>
               <th class="text-end">Acciones</th>
             </tr>
           </thead>
           <tbody>
-            {% for cliente in clientes %}
+            {% for usuario in usuarios %}
               <tr>
-                <td>{{ cliente.nombre }}</td>
-                <td>{{ cliente.apellido }}</td>
-                <td>{{ cliente.telefono }}</td>
+                <td>{{ usuario.username }}</td>
               </tr>
             {% endfor %}
           </tbody>
         </table>
       </div>
     {% else %}
-      <div class="alert alert-info">No hay clientes registrados.</div>
+      <div class="alert alert-info">No hay usuarios registrados.</div>
     {% endif %}
 
   </div>
@@ -55,7 +51,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl">
           <div class="modal-content">
             <div class="modal-header justify-content-center">
-              <h5 class="modal-title" id="confirmModalLabel">CLIENTE AGREGADO</h5>
+              <h5 class="modal-title" id="confirmModalLabel">USUARIO AGREGADO</h5>
             </div>
             <div class="modal-footer justify-content-center">
               <button type="button" class="btn-cerrar" data-bs-dismiss="modal">VOLVER</button>
