test y service de usuario

--- a/core/templates/egreso/confirmar_egreso.html
+++ b/core/templates/egreso/confirmar_egreso.html
@@ -8,17 +8,17 @@
         <div class="datos-container">
             <div class="dato-column">
                 <div class="field-label">VALOR</div>
-                <div>{{ resumen.valor }}</div>
+                <div>{{ datos.valor }}</div>
             </div>
             
             <div class="dato-column">
                 <div class="field-label">FECHA</div>
-                <div>{{ resumen.fecha }}</div>
+                <div>{{ datos.fecha }}</div>
             </div>
             
             <div class="dato-column">
                 <div class="field-label">DESCRIPCION</div>
-                <div>{{ resumen.descripcion }}</div>
+                <div>{{ datos.descripcion }}</div>
             </div>
         </div>
         <div class="button-container justify-content-center">
