implementacion de editar cliente, correcion de mensajes de error de cliente y implementacion de tests de cliente view y cliente form

--- a/core/templates/cliente/cliente_form.html
+++ b/core/templates/cliente/cliente_form.html
@@ -4,7 +4,13 @@
 {% block title %}Agregar Cliente{% endblock %}
 
 {% block content %}
-  <h2 class="titulo">AGREGAR CLIENTE</h2>
+  <h2 class="titulo">
+    {% if modo == 'editar' %}
+      EDITAR CLIENTE
+    {% else %}
+      AGREGAR CLIENTE
+    {% endif %}
+  </h2>
   <h4>DATOS PERSONALES</h4>
 
   <div>
