--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -31,7 +31,7 @@
           <td>{{ cliente.apellido }}</td>
           <td>{{ cliente.telefono }}</td>
           <td>
-            <a href="" class="btn btn-sm btn-outline-primary" title="Editar cliente">
+            <a href="{% url 'cliente_editar' nombre=cliente.nombre apellido=cliente.apellido telefono=cliente.telefono  %}" class="btn btn-sm btn-outline-primary" title="Editar cliente">
               <i class="bi bi-pencil-square"></i>
             </a>
           </td>
@@ -49,7 +49,13 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content">
         <div class="modal-header justify-content-center">
-          <h5 class="modal-title" id="confirmModalLabel">CLIENTE AGREGADO</h5>
+          <h5 class="modal-title" id="confirmModalLabel">
+            {% if 'editado' in message.message %}
+              CLIENTE EDITADO
+            {% else %}
+              CLIENTE AGREGADO
+            {% endif %}
+          </h5>
         </div>
         <div class="modal-footer justify-content-center">
           <button type="button" class="btn-cerrar" data-bs-dismiss="modal">VOLVER</button>
